--- a/index.html
+++ b/index.html
@@ -28,11 +28,48 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 mt-4">
-                    <a href="#reserveForm" role="button" class="btn btn-lg btn-info text-nowrap" data-toggle="tooltip" data-html="true" title="Or call us at <br /><strong>800-555-1212</strong>.">Reserve Campsite</a>
+                    <button class="btn btn-lg btn-info" type="button" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</button>
                 </div>
             </div>
         </div>
     </header>
+
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-info text-white">
+                    <h3 class="modal-title">Reserve a Campsite</h3>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <form>
+                            <div class="form-row">
+                                <div class="form-group col-12">
+                                    <label class="sr-only" for="loginEmail">Email address</label>
+                                    <input type="email" class="form-control form-control-sm" id="loginEmail" placeholder="Enter email">
+                                </div>
+                                <div class="form-group col-12">
+                                    <label class="sr-only" for="loginPassword">Password</label>
+                                    <input type="password" class="form-control form-control-sm" id="loginPassword" placeholder="Password">
+                                </div>
+                                <div class="col">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox">
+                                        <label class="form-check-label"> Remember me</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
@@ -66,7 +103,7 @@
                 <div class="modal-body">
                     <div class="container-fluid">
                         <form>
-                            <div class="form-row">
+                              <div class="form-row">
                                 <div class="form-group col-12">
                                     <label class="sr-only" for="loginEmail">Email address</label>
                                     <input type="email" class="form-control form-control-sm" id="loginEmail" placeholder="Enter email">
@@ -125,7 +162,7 @@
                         </div>
                     </div>
                 </div>
-                    <a class="carousel-control-prev" href="#homeCarousel" role="button" data-slide="prev">
+                        <a class="carousel-control-prev" href="#homeCarousel" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon"></span>
                         <span class="sr-only">Previous</span>
                     </a>
@@ -196,21 +233,39 @@
                                         </select>
                                     </div>
                             </div>
-                            <div class="row form-group">
-                                <label class="col-sm-6 col-form-label"for="date">Date</label>
-                                <div class="col">
-                                    <input class="form-control" type="date" name="date" id="date">
+                                <div class="row form-group">
+                                    <label class="col-sm-6 col-form-label" for="date">Date</label>
+                                    <div class="col">
+                                        <input class="form-control" type="date" name="date" id="date">
+                                    </div>
                                 </div>
+                            <div class="row form-group">
+                                <label class="col-sm-6 col-form-label" for="siteType">Campsite Type</label>
+                                <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons"></div>
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                        <input type="radio" name="options" id="option1" autocomplete="off" checked> Tent
+                                    </label>
+                                    <label class="btn btn-primary">
+                                        <input type="radio" name="options" id="option2" autocomplete="off"> RV
+                                    </label>
+                                </div>
+                            </div>
                             <div class="row form-group">
                                 <div class="col">
                                     <button type="submit" class="btn btn-primary">Select</button>
+                                </div>
+
+                                <div>
+                                    <label class="btn btn-secondary">
+                                        <input type="button" name="options" id="option3" autocomplete="off">Cancel
+                                    </label>
                                 </div>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 
@@ -246,12 +301,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <script>
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
-    </script>
 
 </body>
 
