--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 mt-4">
-                    <button class="btn btn-lg btn-info" type="button" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</button>
+                    <button class="btn btn-lg btn-info text-nowrap" type="button" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</button>
                 </div>
             </div>
         </div>
@@ -44,25 +44,43 @@
                 <div class="modal-body">
                     <div class="container-fluid">
                         <form>
-                            <div class="form-row">
-                                <div class="form-group col-12">
-                                    <label class="sr-only" for="loginEmail">Email address</label>
-                                    <input type="email" class="form-control form-control-sm" id="loginEmail" placeholder="Enter email">
-                                </div>
-                                <div class="form-group col-12">
-                                    <label class="sr-only" for="loginPassword">Password</label>
-                                    <input type="password" class="form-control form-control-sm" id="loginPassword" placeholder="Password">
-                                </div>
-                                <div class="col">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox">
-                                        <label class="form-check-label"> Remember me</label>
+                            <div class="row form-group">
+                                <label class="col-sm-6 col-form-label">Number of Campers</label>
+                                    <div class="col">
+                                        <select class="form-control" name="numCampers" id="numCampers">
+                                            <option>Select...</option>
+                                            <option value="">1</option>
+                                            <option value="">2</option>
+                                            <option value="">3</option>
+                                            <option value="">4</option>
+                                            <option value="">5</option>
+                                            <option value="">6</option>    
+                                        </select>
+                                    </div>
+                            </div>
+                                <div class="row form-group">
+                                    <label class="col-sm-6 col-form-label" for="date">Date</label>
+                                    <div class="col">
+                                        <input class="form-control" type="date" name="date" id="date">
                                     </div>
                                 </div>
+                            <div class="row form-group">
+                                <label class="col-sm-6 col-form-label" for="siteType">Campsite Type</label>
+                                <div class="col btn-group btn-group-toggle" data-toggle="buttons"></div>
+                                <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                        <input type="radio" name="siteType" id="option1" autocomplete="off" value="tent"> Tent
+                                    </label>
+                                    <label class="btn btn-primary">
+                                        <input type="radio" name="siteType" id="option2" autocomplete="off" value="RV"> RV
+                                    </label>
+                                </div>
                             </div>
-                            <div class="form-row">
-                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-                                <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
+                            <div class="row form-group">
+                                <div class="col">
+                                    <button class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </div>
                             </div>
                         </form>
                     </div>
@@ -93,7 +111,7 @@
         </div>
     </nav>
 
-        <div id="loginModal" class="modal fade" role="dialog">
+    <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -103,7 +121,7 @@
                 <div class="modal-body">
                     <div class="container-fluid">
                         <form>
-                              <div class="form-row">
+                            <div class="form-row">
                                 <div class="form-group col-12">
                                     <label class="sr-only" for="loginEmail">Email address</label>
                                     <input type="email" class="form-control form-control-sm" id="loginEmail" placeholder="Enter email">
@@ -213,62 +231,6 @@
                 </div>
             </div>
         </div>
-        <div class="row row-content">
-            <div class="col-sm-6 mx-auto">
-                <div class="card">
-                    <h3 class="card-header bg-info text-white">Reserve Campsite</h3>
-                    <div class="card-body">
-                        <form id="reserveForm">
-                            <div class="row form-group">
-                                <label class="col-sm-6 col-form-label">Number of Campers</label>
-                                    <div class="col">
-                                        <select class="form-control" name="numCampers" id="numCampers">
-                                            <option>Select...</option>
-                                            <option value="">1</option>
-                                            <option value="">2</option>
-                                            <option value="">3</option>
-                                            <option value="">4</option>
-                                            <option value="">5</option>
-                                            <option value="">6</option>    
-                                        </select>
-                                    </div>
-                            </div>
-                                <div class="row form-group">
-                                    <label class="col-sm-6 col-form-label" for="date">Date</label>
-                                    <div class="col">
-                                        <input class="form-control" type="date" name="date" id="date">
-                                    </div>
-                                </div>
-                            <div class="row form-group">
-                                <label class="col-sm-6 col-form-label" for="siteType">Campsite Type</label>
-                                <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons"></div>
-                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                                    <label class="btn btn-success active">
-                                        <input type="radio" name="options" id="option1" autocomplete="off" checked> Tent
-                                    </label>
-                                    <label class="btn btn-primary">
-                                        <input type="radio" name="options" id="option2" autocomplete="off"> RV
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <div class="col">
-                                    <button type="submit" class="btn btn-primary">Select</button>
-                                </div>
-
-                                <div>
-                                    <label class="btn btn-secondary">
-                                        <input type="button" name="options" id="option3" autocomplete="off">Cancel
-                                    </label>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
 
     <footer class="site-footer">
         <div class="container">
