--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 </div>
                             <div class="row form-group">
                                 <label class="col-sm-6 col-form-label" for="siteType">Campsite Type</label>
-                                <div class="col btn-group btn-group-toggle" data-toggle="buttons"></div>
+                                <div class="col btn-group btn-group-toggle" data-toggle="buttons">
                                 <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
                                     <label class="btn btn-success active">
                                         <input type="radio" name="siteType" id="option1" autocomplete="off" value="tent"> Tent
@@ -74,6 +74,7 @@
                                     <label class="btn btn-primary">
                                         <input type="radio" name="siteType" id="option2" autocomplete="off" value="RV"> RV
                                     </label>
+                                </div>
                                 </div>
                             </div>
                             <div class="row form-group">
