--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
         </div>
     </div>
 </div>
-        <div class="row row-content align-items-center">
-            <div class="col-sm-4 order-sm-last col-md-3">
+        <div class="row row-content align-items-center mx-auto">
+            <div class="col-sm-4 order-sm-last col-md-3 align-items-center">
                 <h2 class="text-sm-right">Discover & Review</h2>
             </div>
             <div class="col">
@@ -206,7 +206,7 @@
             </div>
         </div>
 
-        <div class="row row-content align-items-center">
+        <div class="row row-content align-items-center mx-auto">
             <div class="col-sm-4 col-md-3">
                 <h2>Featured Campsites</h2>
             </div>
@@ -217,7 +217,7 @@
             <img src="img/react-lake-thumb.jpg" alt="React Lake Thumbnail" class="d-flex img-thumbnail ml-3">
    		</div>
 
-        <div class="row row-content align-items-center">
+        <div class="row row-content align-items-center mx-auto">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right">Our Community Partners</h2>
             </div>
