--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 mt-4">
-                    <button class="btn btn-lg btn-info text-nowrap" type="button" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</button>
+                    <button class="btn btn-lg btn-info text-nowrap" type="button" id="reserveButton">Reserve Campsite</button>
                 </div>
             </div>
         </div>
@@ -106,7 +106,7 @@
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
                 <span class="navbar-text ml-auto">
-                    <a role="button" data-toggle="modal" data-target="#loginModal"><i class="fa fa-sign-in"></i>Login</a>
+                    <a role="button" id="loginButton"><i class="fa fa-sign-in"></i>Login</a>
                 </span>                
             </div>
         </div>
